SERVER-9612 Fixes mongos to parse correctly IPV6